html/css terminado na study.html/page-study.css | layout para dispositivos moveis é para desktop finalizados

--- a/SemanaNLW2/index.html
+++ b/SemanaNLW2/index.html
@@ -14,7 +14,7 @@
 
         <body id="page-landing">
 
-            <div id="conteiner">
+            <div id="container">
                 <div class="logo-conteiner">
                     <img src="images/logo.svg" alt="proffy">
                     <h2>Sua plataforma e estudos online</h2>
