--- a/SemanaNLW2/index.html
+++ b/SemanaNLW2/index.html
@@ -4,8 +4,12 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="theme-color" content="8257E5">
+
             <title>proffy | Sua plataforma de estudos</title>
             
+            <link rel="shotcut icon" href="/images/favicon.png" type="image/png">
+
             <link rel="stylesheet" href="/styles/main.css">
             <link rel="stylesheet" href="/styles/partials/page-landing.css">
             
